--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="hero-cta">
                <a href="#" class="primary-cta">Try for free</a>
                <a href="#" class="watch-video-cta"> 
-                  <img src="images/watch.svg" alt="watch a video">watch a video
+                  <img src="images/watch.svg" alt="Watch a video">Watch a video
                 </a>
             </div>
         </div>
