--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       </div>
   </section>
 
-  <section class="feature-section">
+  <section class="features-section">
      <div class="container">
-         <ul>
+         <ul class="features-list">
              <li>Unlimited Tasks</li>
              <li>Sms Task Reminders</li>
              <li>Confetti Explosions upon Task Completions</li> 
@@ -63,7 +63,7 @@
     </div>
   </section>
 
-  <section class="testimonisls-section">
+  <section class="testimonials-section">
     <div class="container">
         <ul>
                 <li>
